fix(examples): fix relative urls

--- a/0.3/examples/biatPlay.html
+++ b/0.3/examples/biatPlay.html
@@ -167,7 +167,7 @@ define([&#39;pipAPI&#39;,&#39;pipScorer&#39;], function(APIConstructor,Scorer) {
 	// Set URLs for images and templates
 	API.addSettings(&#39;base_url&#39;,{
 		image : &#39;../../images&#39;,
-		template : &#39;../../../resources/BIAT&#39;
+		template : &#39;../../../../resources/BIAT&#39;
 	});
 
 	// Logging URL
