--- a/0.3/snippets/stimulusPlay.html
+++ b/0.3/snippets/stimulusPlay.html
@@ -188,7 +188,7 @@ define([&#39;pipAPI&#39;,&#39;jquery&#39;], function(APIconstructor, $) {
 				/* the bottom left stimulus begins here */
 				{
 					location:{left:0,bottom:0},
-					media:{template:&#39;../../../resources/bottom_left.html&#39;}
+					media:{template:&#39;../../../../resources/bottom_left.html&#39;}
 				},
 				/* the bottom left stimulus begins here */
 
