--- a/0.3/examples/gnatPlay.html
+++ b/0.3/examples/gnatPlay.html
@@ -164,7 +164,7 @@ define([&#39;pipAPI&#39;,&#39;pipScorer&#39;], function(APIConstructor,Scorer) {
 
 	API.addSettings(&#39;base_url&#39;,{
 		image : &#39;../../images&#39;,
-		template : &#39;../../../resources/GNAT&#39;
+		template : &#39;../../../../resources/GNAT&#39;
 	});
 
 
