--- a/0.3/examples/iatPlay.html
+++ b/0.3/examples/iatPlay.html
@@ -167,7 +167,7 @@ define([&#39;pipAPI&#39;,&#39;pipScorer&#39;], function(APIConstructor,Scorer) {
 	// setting the base urls for images and templates
 	API.addSettings(&#39;base_url&#39;,{
 		image : &#39;../../images&#39;,
-		template : &#39;../../../resources/IAT&#39;
+		template : &#39;../../../../resources/IAT&#39;
 	});
 
 	// setting the way the logger works (how often we send data to the server and the url for the data)
