--- a/0.3/examples/biatPlay.html
+++ b/0.3/examples/biatPlay.html
@@ -170,7 +170,7 @@ define([&#39;pipAPI&#39;,&#39;pipScorer&#39;], function(APIConstructor,Scorer) {
 	// Set URLs for images and templates
 	API.addSettings(&#39;base_url&#39;,{
 		image : &#39;../../images&#39;,
-		template : &#39;../../../../resources/BIAT&#39;
+		template : &#39;../../../resources/BIAT&#39;
 	});
 
 	// Logging URL
@@ -988,6 +988,9 @@ define([&#39;pipAPI&#39;,&#39;pipScorer&#39;], function(APIConstructor,Scorer) {
 				var trial = this;
 
 				//////First call to score//////
+				scorer.addSettings(&#39;compute&#39;,{
+					parcelValue : [&#39;first&#39;]
+				});
 				DScoreObj = scorer.computeD();
 				var DScore1 = DScoreObj.DScore;
 
@@ -995,7 +998,6 @@ define([&#39;pipAPI&#39;,&#39;pipScorer&#39;], function(APIConstructor,Scorer) {
 				scorer.addSettings(&#39;compute&#39;,{
 					parcelValue : [&#39;second&#39;]
 				});
-
 				DScoreObj = scorer.computeD();
 				var DScore2 = DScoreObj.DScore;
 
@@ -1003,7 +1005,6 @@ define([&#39;pipAPI&#39;,&#39;pipScorer&#39;], function(APIConstructor,Scorer) {
 				scorer.addSettings(&#39;compute&#39;,{
 					parcelValue : [&#39;third&#39;]
 				});
-
 				DScoreObj = scorer.computeD();
 				var DScore3 = DScoreObj.DScore;
 
@@ -1015,23 +1016,22 @@ define([&#39;pipAPI&#39;,&#39;pipScorer&#39;], function(APIConstructor,Scorer) {
 				var DScore4 = DScoreObj.DScore;
 
 				// If all scores are numbers
-				if((!isNaN(DScore2)) &amp;&amp; (!isNaN(DScore2)) &amp;&amp; (!isNaN(DScore3)) &amp;&amp; (!isNaN(DScore4))){
+				if ((DScore1 !== &#39;&#39;) &amp;&amp; (DScore2 !== &#39;&#39;) &amp;&amp; (DScore3 !== &#39;&#39;) &amp;&amp; (DScore4 !== &#39;&#39;)){
 					//Average the 4 scores
 					DScore = (parseFloat(DScore1) + parseFloat(DScore2) + parseFloat(DScore3) + parseFloat(DScore4))/4;
-					if(isNaN(DScore)){
-						FBMsg = DScoreObj.errorMessage;
-					}
-					else{
-						FBMsg = scorer.getFBMsg(DScore);
-					}
+					FBMsg = scorer.getFBMsg(DScore);
+				} else {
+					DScore = &#39;&#39;;
+					FBMsg = &#39;An error has occurred&#39;;
 				}
-				else{
-					FBMsg = DScoreObj.errorMessage;
-					DScore = &quot;&quot;;
-				}
+
 				var media = {css:{color:&#39;black&#39;},media:{html:&#39;&lt;div&gt;&lt;p style=&quot;font-size:28px&quot;&gt;&lt;color=&quot;#FFFAFA&quot;&gt; &#39;+FBMsg+&#39;&lt;br&gt;The Score is:&#39;+DScore+&#39;&lt;/p&gt;&lt;/div&gt;&#39;}};
 				trial.stimuli.push(media);
-				scorer.postToServer(DScore,FBMsg,&quot;score&quot;,&quot;feedback&quot;);
+				scorer.dynamicPost({
+					score: DScoreObj.DScore,
+					feedback: DScoreObj.FBMsg
+				});
+
 			}
 		},
 
