--- a/0.3/examples/st-iatPlay.html
+++ b/0.3/examples/st-iatPlay.html
@@ -599,6 +599,10 @@ define([&#39;pipAPI&#39;,&#39;pipScorer&#39;], function(APIConstructor,Scorer) {
 				var trial = this;
 
 
+				scorer.addSettings(&#39;compute&#39;,{
+					parcelValue : [&#39;first&#39;]
+				});
+
 				DScoreObj = scorer.computeD();
 				var DScore1= DScoreObj.DScore;
 
@@ -610,30 +614,26 @@ define([&#39;pipAPI&#39;,&#39;pipScorer&#39;], function(APIConstructor,Scorer) {
 				DScoreObj = scorer.computeD();
 				var DScore2 = DScoreObj.DScore;
 
-					//avrage the scores
-					console.log(DScore1);
-					console.log(DScore2);
-					if((!isNaN(DScore1)) &amp;&amp; (!isNaN(DScore2)) ){
-						DScore = (parseFloat(DScore1) + parseFloat(DScore2))/2;
-						console.log(DScore);
-						if(isNaN(DScore)){
-						FBMsg = DScoreObj.errorMessage;
-						}
-						else{
-						FBMsg = scorer.getFBMsg(DScore);
-						}
-						console.log(FBMsg);
-
-					}
-					else{
-						FBMsg = DScoreObj.errorMessage;
-						DScore = &quot;&quot;;
-
-					}
+				//avrage the scores
+				console.log(DScore1);
+				console.log(DScore2);
+				// If all scores are numbers
+				if ((DScore1 !== &#39;&#39;) &amp;&amp; (DScore2 !== &#39;&#39;)){
+					//Average the 4 scores
+					DScore = (parseFloat(DScore1) + parseFloat(DScore2))/2;
+					FBMsg = scorer.getFBMsg(DScore);
+				} else {
+					DScore = &#39;&#39;;
+					FBMsg = &#39;An error has occurred&#39;;
+				}
 
 				var media = {css:{color:&#39;black&#39;},media:{html:&#39;&lt;div&gt;&lt;p style=&quot;font-size:28px&quot;&gt;&lt;color=&quot;#FFFAFA&quot;&gt; &#39;+FBMsg+&#39;&lt;br&gt;The Score is:&#39;+DScore+&#39;&lt;/p&gt;&lt;/div&gt;&#39;}};
 				trial.stimuli.push(media);
-				scorer.postToServer(DScore,FBMsg,&quot;score1&quot;,&quot;feedback1&quot;);
+				scorer.dynamicPost({
+					score1: DScoreObj.DScore,
+					feedback1: DScoreObj.FBMsg
+				});
+
 			}
 		},
 
