--- a/0.3/examples/gnatPlay.html
+++ b/0.3/examples/gnatPlay.html
@@ -716,7 +716,7 @@ define([&#39;pipAPI&#39;,&#39;pipScorer&#39;], function(APIConstructor,Scorer) {
 			{word: &#39;Nice&#39;},
 			{word: &#39;Heaven&#39;},
 			{word: &#39;Happy&#39;},
-			{word: &#39;Pleasaure&#39;}
+			{word: &#39;Pleasure&#39;}
 		],
 		attribute2: [ //Unpleasant
 			{word: &#39;Nasty&#39;},
