chore(resources): updated URL

--- a/0.3/tutorials/resources.html
+++ b/0.3/tutorials/resources.html
@@ -104,7 +104,7 @@
 					
 	<h3 id="extensions">Extensions</h3>
 <p>The PI tasks are easily extensible.</p>
-<p><a href="http://www.bgu.ac.il/~baranany/">Yoav Bar-Anan</a> from <a href="https://implicit.harvard.edu/implicit/aboutus.html">Project Implicit</a> has created several extensions for the easy creation of a few common reaction-time tasks. You can find the instructions for using them right <a href="https://app-dev-01.implicit.harvard.edu/implicit/common/all/js/pip/piscripts/ydocs/dist/index.html">here</a>.</p>
+<p><a href="http://www.bgu.ac.il/~baranany/">Yoav Bar-Anan</a> from <a href="https://implicit.harvard.edu/implicit/aboutus.html">Project Implicit</a> has created several extensions for the easy creation of a few common reaction-time tasks. You can find the instructions for using them right <a href="https://app-prod-03.implicit.harvard.edu/implicit/common/all/js/pip/piscripts/ydocs/dist/index.html">here</a>.</p>
 
 
 				</div>
