--- a/0.3/tutorials/API.html
+++ b/0.3/tutorials/API.html
@@ -93,7 +93,7 @@
 			<div class="container">
 				
 	<h1>API</h1>
-	<p>All the little details...</p>
+	<p>All the little details</p>
 
 			</div>
 		</div>
@@ -102,7 +102,8 @@
 			<div class="row">
 				<div class="col-md-9" role="main">
 					
-	<h3 id="table-of-contents">Table of contents</h3>
+	<hr>
+<h3 id="table-of-contents">Table of contents</h3>
 <ul>
 <li><a href="#definitions">Definitions</a></li>
 <li><a href="#media">Media</a></li>
