--- a/0.3/tutorials/scorer.html
+++ b/0.3/tutorials/scorer.html
@@ -93,7 +93,7 @@
 			<div class="container">
 				
 	<h1>API</h1>
-	<p>All the little details</p>
+	<p>All the little details...</p>
 
 			</div>
 		</div>
@@ -102,8 +102,7 @@
 			<div class="row">
 				<div class="col-md-9" role="main">
 					
-	<hr>
-<p>The Scorer component of the PIP is an implementation of the D-score algorithm for computing IAT scores. The scorer allows creating an appropriate feedback message for the users, as well as logging them to the server.
+	<p>The Scorer component of the PIP is an implementation of the D-score algorithm for computing IAT scores. The scorer allows creating an appropriate feedback message for the users, as well as logging them to the server.
 In order to compute the score the trials are divided to parcels, the score for each parcel is computed and then the scores are averaged.</p>
 <h3 id="table-of-contents">Table of contents</h3>
 <ul>
