--- a/0.3/examples/API.html
+++ b/0.3/examples/API.html
@@ -93,7 +93,7 @@
 			<div class="container">
 				
 	<h1>API</h1>
-	<p>All the little details</p>
+	<p>All the little details...</p>
 
 			</div>
 		</div>
@@ -102,8 +102,7 @@
 			<div class="row">
 				<div class="col-md-9" role="main">
 					
-	<hr>
-
+	
 
 				</div>
 
