chore(API): added documentation for onEnd support

--- a/0.3/tutorials/API.html
+++ b/0.3/tutorials/API.html
@@ -93,7 +93,7 @@
 			<div class="container">
 				
 	<h1>API</h1>
-	<p>All the little details...</p>
+	<p>All the little details</p>
 
 			</div>
 		</div>
@@ -102,7 +102,8 @@
 			<div class="row">
 				<div class="col-md-9" role="main">
 					
-	<h3 id="table-of-contents">Table of contents</h3>
+	<hr>
+<h3 id="table-of-contents">Table of contents</h3>
 <ul>
 <li><a href="#definitions">Definitions</a></li>
 <li><a href="#media">Media</a></li>
@@ -840,6 +841,9 @@ This option is not used if the endTask hook is set.</p>
 </code></pre>
 <p><code>endTask</code>:
 Called at the end of the task instead of the default redirect.</p>
+<h4 id="onend">onEnd</h4>
+<p>Called at the end of the task instead of the default redirect.
+This function is a more standart complient version of <code>hooks.endTask</code>.</p>
 <h4 id="meta-data">Meta data</h4>
 <p>Meta data is data that should be returned with every request to the server.
 Any key value pair in the meta data is added to every post the player makes to the server.
