--- a/0.3/tutorials/API.html
+++ b/0.3/tutorials/API.html
@@ -1008,6 +1008,8 @@ The field includes a json array including all logs created. each log is an objec
 </tr>
 </tbody>
 </table>
+<p>You can control the names that the different elements get by adding an <code>alias</code> property to the element itslef or to its <code>data</code>.
+If the <code>alias</code> isn’t set, then the player attempts to choose a meaningful name on its own (using the inherited set, or whatever is appropriate).</p>
 
 
 				</div>
