--- a/0.3/tutorials/stroop-interactionsPlay.html
+++ b/0.3/tutorials/stroop-interactionsPlay.html
@@ -10,7 +10,7 @@
 		<meta name="keywords" content="HTML, CSS, JS, JavaScript, framework, bootstrap, front-end, frontend, web development">
 		<meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
 
-		<title>piPlayer &middot; V0.3</title>
+		<title>miPlayer &middot; V0.3</title>
 
 		
 	
@@ -100,13 +100,13 @@
 							<a href="/PIquest/0.1/basics">Basics</a>
 						</li>
 						<li>
-							<a href="/PIquest/0.1/quest">piQuest</a>
+							<a href="/PIquest/0.1/quest">miQuest</a>
 						</li>
 						<li>
-							<a href="/PIquest/0.1/manager">piManager</a>
+							<a href="/PIquest/0.1/manager">miManager</a>
 						</li>
 						<li class="active">
-							<a href="javascript:void(0);">piPlayer</a>
+							<a href="javascript:void(0);">miPlayer</a>
 						</li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
@@ -121,7 +121,7 @@
 							  <input type="hidden" name="sitesearch" value="projectimplicit.github.io" checked />
 							</form>
 						</li>
-						<li><a href="https://github.com/ProjectImplicit/PIPlayer">Github</a></li>
+						<li><a href="https://github.com/minnojs/minno-time">Github</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -648,9 +648,9 @@ define([&#39;pipAPI&#39;], function(APIconstructor) {
 				<ul class="bs-docs-footer-links text-muted">
 					<li>Currently v0.0.27</li>
 					<li>&middot;</li>
-					<li><a href="https://github.com/ProjectImplicit/PIquest">GitHub</a></li>
+					<li><a href="https://github.com/minnojs/minno-time">GitHub</a></li>
 					<li>&middot;</li>
-					<li><a href="https://github.com/ProjectImplicit/PIquest/releases">Releases</a></li>
+					<li><a href="https://github.com/minnojs/minno-time/releases">Releases</a></li>
 				</ul>
 			</div>
 		</footer>
