style(*): change font to open sans

--- a/0.3/tutorials/overview.html
+++ b/0.3/tutorials/overview.html
@@ -17,6 +17,7 @@
 		<link href="../../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 		<link href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/sunburst.min.css" rel="stylesheet">
 		<link href="../css/style.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
 		<style type="text/css">
 			pre {display:block;overflow-x:auto;padding:0.5em;background:#000;color:#f8f8f8;-webkit-text-size-adjust:none}
 			table {padding: 0;}
@@ -102,7 +103,7 @@
 			<div class="row">
 				<div class="col-md-9" role="main">
 					
-	<p>PI Player builds and runs experiments with time-sensitive tasks over the Internet. It is written in JavaScript and is built to be extremely versatile and customizable.
+	<p>Minno-time builds and runs experiments with time-sensitive tasks over the Internet. It is written in JavaScript and is built to be extremely versatile and customizable.
 Researchers can program their own studies by writing scripts in a language that PIP can understand. Those scripts are written as JavaScript objects. This format allows writing simple and straightforward scripts using a constrained scripting language. The format also allows advanced users to easily create complex and dynamic scripts using in-line JavaScript.</p>
 <h3 id="central-concepts">Central Concepts</h3>
 <p>The player treats each task as a <strong>sequence</strong> of <strong>trials</strong>.</p>
